--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "typescript": "^4.4.3"
   },
   "scripts": {
-    "dev": "ts-node-dev --transpile-only --ignore-watch node-modules --respawn src/server.ts"
+    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node-modules --respawn src/server.ts"
   },
   "dependencies": {
     "-": "^0.0.1",
