--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "-": "^0.0.1",
     "@types/multer": "^1.4.7",
     "@types/uuid": "^8.3.1",
+    "csv-parse": "^4.16.3",
     "eslint-import-resolver-typescript": "^2.5.0",
     "multer": "^1.4.3",
     "uuid": "^8.3.2"
