--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^4.32.0",
     "@typescript-eslint/parser": "^4.32.0",
     "eslint": "^7.32.0",
@@ -23,6 +24,7 @@
     "csv-parse": "^4.16.3",
     "eslint-import-resolver-typescript": "^2.5.0",
     "multer": "^1.4.3",
+    "swagger-ui-express": "^4.1.6",
     "uuid": "^8.3.2"
   },
   "name": "CriandoApiComNodeJS",
