--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "csv-parse": "^4.16.3",
     "eslint-import-resolver-typescript": "^2.5.0",
     "multer": "^1.4.3",
+    "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.1.6",
+    "typeorm": "^0.2.38",
     "uuid": "^8.3.2"
   },
   "name": "CriandoApiComNodeJS",
