--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "typescript": "^4.4.3"
   },
   "scripts": {
-    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node-modules --respawn src/server.ts"
+    "dev": "ts-node-dev --transpile-only --pool --ignore-watch node-modules --respawn src/server.ts"
   },
   "dependencies": {
     "-": "^0.0.1",
@@ -23,6 +23,7 @@
     "@types/uuid": "^8.3.1",
     "csv-parse": "^4.16.3",
     "eslint-import-resolver-typescript": "^2.5.0",
+    "express-async-errors": "^3.1.1",
     "multer": "^1.4.3",
     "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.1.6",
