--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "typescript": "^4.4.3"
   },
   "scripts": {
-    "dev": "ts-node-dev --transpile-only --pool --ignore-watch node-modules --respawn src/server.ts"
+    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn --poll --interval 1000 src/server.ts",
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli"
   },
   "dependencies": {
     "-": "^0.0.1",
@@ -25,6 +26,7 @@
     "eslint-import-resolver-typescript": "^2.5.0",
     "express-async-errors": "^3.1.1",
     "multer": "^1.4.3",
+    "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.1.6",
     "typeorm": "^0.2.38",
