--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
     "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^4.32.0",
@@ -22,6 +23,7 @@
     "-": "^0.0.1",
     "@types/multer": "^1.4.7",
     "@types/uuid": "^8.3.1",
+    "bcryptjs": "^2.4.3",
     "csv-parse": "^4.16.3",
     "eslint-import-resolver-typescript": "^2.5.0",
     "express-async-errors": "^3.1.1",
