--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "typescript": "^4.4.3"
   },
   "scripts": {
-    "dev": "ts-node-dev --inspect -r tsconfig-paths/register --transpile-only --ignore-watch node_modules --respawn --poll --interval 1000 src/server.ts",
+    "dev": "ts-node-dev --inspect -r tsconfig-paths/register --transpile-only --ignore-watch node_modules --respawn --poll --interval 1000 src/shared/infra/http/server.ts",
     "typeorm": "ts-node-dev r tsconfig-paths/register ./node_modules/typeorm/cli",
     "test": "jest"
   },
