--- a/package.json
+++ b/package.json
@@ -22,11 +22,10 @@
   },
   "scripts": {
     "dev": "ts-node-dev --inspect -r tsconfig-paths/register --transpile-only --ignore-watch node_modules --respawn --poll --interval 1000 src/shared/infra/http/server.ts",
-    "typeorm": "ts-node-dev r tsconfig-paths/register ./node_modules/typeorm/cli",
+    "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli",
     "test": "jest"
   },
   "dependencies": {
-    "-": "^0.0.1",
     "@types/multer": "^1.4.7",
     "@types/uuid": "^8.3.1",
     "bcryptjs": "^2.4.3",
